# SieveColorSpace

./: .gitignore  README.md  README_FR.md  leaderboard.md  pyproject.toml  scs_demo.html
article/: PT_COLOR.tex  PT_COLOR_FR.tex
demonstration/: demo.html  module01_read_a_color_in_scs.html  module02_the_sunset_example.html  module03_skin_tone_protection.html  module04_equilibrium.html  module05_highlight_color_preservation.html  module06_color_cast_separation.html  module07_black_and_white_from_scs.html  module08_scs_vs_cielab_dark_region.html
docs/: api.md  theory.md
saturation_study/: config.js  index.html  study.html  study.js
scripts/: delta_e_scs.py  scs_companion.py
scs/: __init__.py
