[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scs"
version = "0.2.0"
description = "Sieve Color Space — a sieve-derived geometric layer for color, composable with CIE tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Yan Senez" },
]
keywords = ["color", "colorimetry", "color-difference", "persistence-theory", "fisher-metric", "sieve"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=1.20",
]

# Optional dependency sets. `pip install -e .[full]` installs everything
# needed by the demonstration scripts (scs_cam02_hybrid, delta_e_scs00,
# macadam_test, v4_*). Core `scs` package only requires numpy.
[project.optional-dependencies]
full = [
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "colour-science>=0.4",
    "matplotlib>=3.5",
]

[project.urls]
Repository = "https://github.com/Igrekess/SieveColorSpace"
Documentation = "https://github.com/Igrekess/SieveColorSpace#readme"
Zenodo = "https://zenodo.org/records/19614967"

[tool.hatch.build.targets.wheel]
packages = ["scs"]
